fixup! CSS Exercises: Grid 03 sidebar, fix overridden align-items

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -56,7 +56,6 @@
 }
 
 .sidebar {
-  align-items: center;
   background-color: #c50208;
   display: grid;
   grid-area: sidebar;
